--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,42 +1,122 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
+  * {
+    @apply box-border m-0 p-0;
+  }
+
   h1 {
-    @apply font-primary text-2xl font-bold md:text-4xl text-main-7 dark:text-main-2;
+    @apply font-primary text-heading-sm font-bold text-primary-gray;
   }
 
-  h2 {
-    @apply font-primary text-xl font-bold md:text-3xl text-main-7 dark:text-main-2;
-  }
-
-  h3 {
-    @apply font-primary text-lg font-bold md:text-2xl text-main-7 dark:text-main-2;
-  }
-
-  h4 {
-    @apply font-primary text-base font-bold md:text-lg text-main-7 dark:text-main-2;
+  html {
+    @apply font-primary text-base font-bold;
   }
 
   body {
-    @apply font-primary text-sm md:text-base antialiased bg-main-1 dark:bg-main-8 text-main-6 dark:text-main-3;
-    @apply min-h-screen flex items-center justify-center;
+    @apply font-primary text-body bg-primary-very-dark-gray text-primary-almost-white;
+    @apply min-h-screen flex flex-col items-center justify-center;
   }
 
-  html.dark {
-    color-scheme: dark;
+  label {
+    @apply text-heading-sm;
+    /* display: grid;
+    grid-template-columns: 2rem auto;
+    gap: 0.5rem; */
+  }
+
+  input[type='checkbox'] {
+    @apply appearance-none  border-2 border-solid border-primary-almost-white text-primary-very-dark-gray w-[2rem] h-[2rem] inline-block relative;
+    /* @apply flex-shrink-0 flex-grow-0 flex-none; */
+    /* @apply focus:outline-none focus:ring-0; */
+    /* focus:ring-primary-cyan; */
+    /* @apply transition-colors duration-300 ease-in-out; */
+    /* @apply cursor-pointer; */
+    /* @apply checked:text-primary-very-dark-gray;
+    @apply after:absolute after:contents after:bg-secondary-neon-green after:left-0 after:top-0; */
+  }
+
+  /* input[type='checkbox']::after {
+    position: absolute;
+    content: '';
+    display: block;
+    background: blue;
+    color: white;
+  } */
+
+  input[type='checkbox']:checked {
+    /* background: red; */
+    @apply bg-secondary-neon-green;
+    @apply text-primary-very-dark-gray;
+    @apply border-0;
+    /* border: 1px solid green; */
+  }
+
+  input[type='checkbox']:checked::after {
+    /* @apply absolute bg-checkmark; */
+    background-image: url('../assets/images/icon-check.svg');
+    content: '';
+  }
+
+  /* input[type='checkbox']:checked::before {
+    @apply bg-secondary-neon-green text-primary-very-dark-gray;
+    position: absolute;
+    content: '✔';
+    content: '\E800';
+    content: '\2714';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: green;
+    color: white;
+    font-size: 1.5rem;
+    width: 100%;
+    height: 100%;
+  } */
+
+  label svg {
+    @apply outline-2 outline-primary-almost-white;
+  }
+
+  input[type='checkbox'] + label svg {
+    border: 0;
+    fill: blue;
+    height: 20px;
+    width: 20px;
+    opacity: 0;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    transition: opacity 0.2s ease-in-out;
+  }
+
+  input[type='checkbox']:checked + label svg {
+    opacity: 1;
+  }
+}
+
+@layer components {
+  .app-container {
+    @apply flex flex-col items-center justify-center min-w-[37.5rem] max-w-[54rem] w-full h-full;
   }
 }
 
 @layer utilities {
-  .layout {
-    @apply w-10/12 sm:w-11/12 max-w-3xl mx-auto;
+  .section,
+  input,
+  input > div {
+    @apply bg-primary-dark-gray;
   }
 
-  img.react {
-    filter: drop-shadow(0 0 1em #61dafbaa);
-    animation-duration: 1s;
-    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  .section {
+    @apply w-full h-full flex items-center;
+  }
+
+  .layout {
+    @apply w-10/12 sm:w-11/12 max-w-3xl mx-auto;
   }
 }
