--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -22,80 +22,28 @@
     @apply min-h-screen flex flex-col items-center justify-center;
   }
 
-  label {
-    @apply text-heading-sm;
-    /* display: grid;
-    grid-template-columns: 2rem auto;
-    gap: 0.5rem; */
+  .checkbox > label {
+    @apply text-heading-sm relative;
   }
 
-  input[type='checkbox'] {
-    @apply appearance-none  border-2 border-solid border-primary-almost-white text-primary-very-dark-gray w-[2rem] h-[2rem] inline-block relative;
-    /* @apply flex-shrink-0 flex-grow-0 flex-none; */
-    /* @apply focus:outline-none focus:ring-0; */
-    /* focus:ring-primary-cyan; */
-    /* @apply transition-colors duration-300 ease-in-out; */
-    /* @apply cursor-pointer; */
-    /* @apply checked:text-primary-very-dark-gray;
-    @apply after:absolute after:contents after:bg-secondary-neon-green after:left-0 after:top-0; */
+  .checkbox > input[type='checkbox'],
+  .checkbox > label {
+    @apply cursor-pointer;
   }
 
-  /* input[type='checkbox']::after {
-    position: absolute;
-    content: '';
-    display: block;
-    background: blue;
-    color: white;
-  } */
-
-  input[type='checkbox']:checked {
-    /* background: red; */
-    @apply bg-secondary-neon-green;
-    @apply text-primary-very-dark-gray;
-    @apply border-0;
-    /* border: 1px solid green; */
+  .checkbox > input[type='checkbox'] {
+    @apply appearance-none;
+    @apply w-[2rem] h-[2rem] inline-block relative;
+    @apply focus:outline-none focus:ring-0;
+    @apply transition-colors duration-300 ease-in-out;
   }
 
-  input[type='checkbox']:checked::after {
-    /* @apply absolute bg-checkmark; */
-    background-image: url('../assets/images/icon-check.svg');
-    content: '';
+  .checkbox > input[type='checkbox']:not(:checked) {
+    @apply border-2 border-solid border-primary-almost-white
   }
 
-  /* input[type='checkbox']:checked::before {
-    @apply bg-secondary-neon-green text-primary-very-dark-gray;
-    position: absolute;
-    content: '✔';
-    content: '\E800';
-    content: '\2714';
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: green;
-    color: white;
-    font-size: 1.5rem;
-    width: 100%;
-    height: 100%;
-  } */
-
-  label svg {
-    @apply outline-2 outline-primary-almost-white;
-  }
-
-  input[type='checkbox'] + label svg {
-    border: 0;
-    fill: blue;
-    height: 20px;
-    width: 20px;
-    opacity: 0;
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    transition: opacity 0.2s ease-in-out;
-  }
-
-  input[type='checkbox']:checked + label svg {
-    opacity: 1;
+  .checkbox > input[type='checkbox']:checked {
+    @apply bg-secondary-neon-green bg-no-repeat bg-center bg-checkmark;
   }
 }
 
@@ -103,9 +51,7 @@
   .app-container {
     @apply flex flex-col items-center justify-center min-w-[37.5rem] max-w-[54rem] w-full h-full;
   }
-}
 
-@layer utilities {
   .section,
   input,
   input > div {
@@ -115,6 +61,10 @@
   .section {
     @apply w-full h-full flex items-center;
   }
+}
+
+@layer utilities {
+  
 
   .layout {
     @apply w-10/12 sm:w-11/12 max-w-3xl mx-auto;
